# cpp-crypto-wallet

./: CMakeLists.txt  README.md  main.cpp  main2.cpp  main_qt.cpp
include/: base58.cpp  base58.hpp  key_manager.h  network.h  transaction.h  utils.h  wallet.h
include/bitoc/: BitCoinHelper.hpp
include/cli/: WalletCLI.hpp
include/crypto/: CryptoWallet.hpp  EthereumWallet.hpp  SolanaWallet.hpp
include/encoding/: Base58.hpp
include/helpers/: JsonRpcHelper.hpp  WalletHelper.hpp
include/interfaces/: IKeyManager.hpp  INetwork.hpp  IWallet.hpp
include/solana/: EthereumHelper.hpp  SolanaHelper.hpp  SolanaKeyManager.hpp  SolanaNetwork.hpp  SolanaWallet.hpp  solana_key_manager.hpp  solana_network.hpp  solana_transaction.hpp  solana_utils.hpp  solana_wallet.hpp
include/wallet/: WalletManager.hpp
src/: key_manager.cpp  network.cpp  transaction.cpp  utils.cpp  wallet.cpp
src/bitoc/: BitCoinHelper.cpp
src/cli/: WalletCLI.cpp
src/crypto/: EthereumWallet.cpp  SolanaWallet.cpp
src/encoding/: Base58.cpp  Base58.hpp.cpp
src/helpers/: JsonRpcHelper.cpp  WalletHelper.cpp
src/solana/: EthereumHelper.cpp  SolanaHelper.cpp  SolanaKeyManager.cpp  SolanaNetwork.cpp  SolanaWallet.cpp  solana_key_manager.cpp  solana_network.cpp  solana_transaction.cpp  solana_utils.cpp  solana_wallet.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/wallet/: WalletManager.cpp
